# flet-background-service

./: .gitattributes  .py  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  android_manifest_additions.xml  ios_info_plist_additions.xml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/flet_background_service_example/: main.py  pyproject.toml
src/flet_background_service/: __init__.py  _service.py  _types.py
src/flutter/flet_background_service/: .flutter-plugins-dependencies  analysis_options.yaml  pubspec.yaml
src/flutter/flet_background_service/.dart_tool/: package_config.json  package_graph.json
src/flutter/flet_background_service/lib/: flet_background_service.dart
src/flutter/flet_background_service/lib/src/: background_service_impl.dart  extension.dart
