[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "flet-background-service-example"
version         = "0.1.0"
requires-python = ">=3.12"
dependencies    = [
    # Path dependency pointing at the extension root during development.
    # Replace with PyPI name once published:
    #   "flet-background-service>=0.1.0",
    "flet-background-service @ file:///${PROJECT_ROOT}/../..",
    "flet>=0.83.0",
]

[tool.flet]
org = "com.yourorg"

[tool.flet.android.permission]
"android.permission.FOREGROUND_SERVICE"                    = true
"android.permission.FOREGROUND_SERVICE_CONNECTED_DEVICE"   = true
"android.permission.RECEIVE_BOOT_COMPLETED"                = true
"android.permission.POST_NOTIFICATIONS"                    = true
"android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"  = true

[tool.flet.android.meta_data]
"io.flutter.embedding.android.NormalTheme" = "@style/NormalTheme"